# SEALib

./: .gitignore  Allocator.c  Allocator.h  Arena.c  Arena.h  CMakeLists.txt  Main.c  Main.sea  Main.sea.c  Main.sea.h  Person.c  Person.h  Person.sea  Person.sea.c  Person.sea.h  Random.c  Random.h  Random.sea.c  Random.sea.h  Uuid.c  Uuid.h  build.zig
BlockRuntime/: CMakeLists.txt  config.h  data.c  runtime.c
SEA/: Align.h  Allocator.c  Allocator.h  Arena.c  Arena.h  ArraySegmented.c  ArraySegmented.h  Compat.h  Error.c  Error.h  Iterator.h  JSONArray.c  JSONArray.h  JSONObject.c  JSONObject.h  JSONParser.c  JSONParser.h  JSONType.h  JSONValue.c  JSONValue.h  ListChunked.c  ListChunked.h  ListDyn.c  ListDyn.h  ListSegmented.c  ListSegmented.h  Macro.h  Memory.h  Random.c  Random.h  String.c  String.h  StringBuffer.c  StringBuffer.h  StringCompat.c  StringCompat.h  ThreadCompat.h  Time.c  Time.h  UUID.c  (+1 more)
SEA/Compat/: AlignCompat.h  MathCompat.c  MathCompat.h  StringCompat.c  StringCompat.h  ThreadCompat.h  TypeCompat.h
SEA/Config/: CompConfig.h
SEA/JSON/: JSONArray.c  JSONArray.h  JSONObject.c  JSONObject.h  JSONParser.c  JSONParser.h  JSONValue.c  JSONValue.h
SEA/Utils/: ScopeUtils.h
Sea/: Allocator.c  Allocator.h  Arena.c  Arena.h  Compat.h  Error.c  Error.h  JSON.c  JSON.h  Memory.h  Person.c  Person.h  Person.sea  Random.c  Random.h  Random.sea  String.c  String.h  ThreadLocal.h  Time.c  Time.h  UUID.c  UUID.h  Uuid.c  Uuid.h
Test/: Main.c  Person.c  Person.h  TestArena.c  TestArena.h  TestArraySegmented.c  TestArraySegmented.h  TestJsonBatch.c  TestJsonBatch.h  TestJsonGeneric.c  TestJsonGeneric.h  TestJsonNumbers.c  TestJsonNumbers.h  TestLists.c  TestLists.h
TestBlock/: ForEach.h  Lazy.h  ListOf.h  Macro.h  main.c
TestZig/: main.zig
